--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ httparse = "1.3.3"
 futures = "0.1.25"
 serde = "1.0.85"
 serde_json = "1.0.36"
+serde_derive = "1.0.85"
 
 [dev-dependencies]
 clap = "2.32.0"
