--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ futures = "0.1.25"
 serde = "1.0.85"
 serde_json = "1.0.36"
 serde_derive = "1.0.85"
+tokio-threadpool = "0.1.10"
+tokio-executor = "0.1.6"
 
 [dev-dependencies]
 clap = "2.32.0"
