--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ serde_json = "1.0.36"
 serde_derive = "1.0.85"
 tokio-threadpool = "0.1.10"
 tokio-executor = "0.1.6"
+log = "0.4.6"
 
 [dev-dependencies]
 clap = "2.32.0"
+env_logger = "0.6.0"
