--- a/tools/gatling/src/test/resources/application.conf
+++ b/tools/gatling/src/test/resources/application.conf
@@ -1,2 +1,6 @@
 target-address = "0.0.0.0:8888"
 target-address = ${?TARGET_ADDRESS}
+constant-users = 600
+constant-users = ${?CONSTANT_USERS}
+during = 60
+during = ${?DURING}
