--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,11 @@ serde_derive = "1.0.85"
 tokio-threadpool = "0.1.10"
 tokio-executor = "0.1.6"
 log = "0.4.6"
+tokio-tls = "0.2.1"
 
 [dev-dependencies]
 clap = "2.32.0"
 env_logger = "0.6.0"
 actix = "0.7.9"
 actix-web = "0.7.18"
+hyper = "0.12.23"
