--- a/tools/gatling/src/test/resources/application.conf
+++ b/tools/gatling/src/test/resources/application.conf
@@ -1,6 +1,25 @@
-target-address = "0.0.0.0:8888"
-target-address = ${?TARGET_ADDRESS}
+target-name = ${TARGET_NAME}
+target-host = ${TARGET_HOST}
 constant-users = 600
 constant-users = ${?CONSTANT_USERS}
 during = 60
 during = ${?DURING}
+gatling.core.outputDirectoryBaseName = ${TARGET_NAME}
+targets {
+  tokio {
+    host = ${target-host}
+    port = 8888
+  }
+  nodejs {
+    host = ${target-host}
+    port = 8889
+  }
+  actix {
+    host = ${target-host}
+    port = 8890
+  }
+  hyper {
+    host = ${target-host}
+    port = 8891
+  }
+}
