--- a/tools/gatling/src/test/resources/gatling.conf
+++ b/tools/gatling/src/test/resources/gatling.conf
@@ -1,5 +1,6 @@
+include "application.conf"
 gatling {
   core {
-    outputDirectoryBaseName = ${TARGET_NAME}/${TARGET_NAME}
+    outputDirectoryBaseName = ${target-name}/${target-name}-${constant-users}
   }
 }
