--- a/tools/gatling/src/test/resources/gatling.conf
+++ b/tools/gatling/src/test/resources/gatling.conf
@@ -1,6 +1,6 @@
 include "application.conf"
 gatling {
   core {
-    outputDirectoryBaseName = ${target-name}/${target-name}-${constant-users}
+    outputDirectoryBaseName = ${target-name}/${target-host}-${constant-users}
   }
 }
